--- a/assets/stylesheet.css
+++ b/assets/stylesheet.css
@@ -1,56 +1,82 @@
+body {
+  flex-flow: column;
+  justify-content: center;
+  align-items: center;
+  background-color: black;
+}
+
+.centered {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 header {
-    background-color: black;
+  text-align: center;
 }
-
-img {
-    position: relative;
-    right: -50%;
-}
-
-.center {
-    margin: auto;
-    padding: 10px;
-    text-align: center;
-  }
 
 h1 {
-    color: orange;
+  color: orange;
+}
+
+h2 {
+  color:white;
+}
+
+#event-date-label {
+  width: 100%;
+  text-align: center;
 }
 
 * {
-    background-color: black;
+  background-color: black;
+}
+
+.signup {
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
+}
+
+#pumpkin-image {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 30%;
 }
 
 /* Style inputs with type="text", select elements and textareas */
-input[type=text], select, textarea {
-    width: 100%; /* Full width */
-    padding: 12px; /* Some padding */ 
-    border: 1px solid #ccc; /* Gray border */
-    border-radius: 4px; /* Rounded borders */
-    box-sizing: border-box; /* Make sure that padding and width stays in place */
-    margin-top: 6px; /* Add a top margin */
-    margin-bottom: 16px; /* Bottom margin */
-    resize: vertical /* Allow the user to vertically resize the textarea (not horizontally) */
-  }
+input {
+  color: white;
+  width: 400; /* Full width */
+  padding: 12px; /* Some padding */ 
+  border: 1px solid #ffffff; /* Gray border */
+  border-radius: 4px; /* Rounded borders */
+  box-sizing: border-box; /* Make sure that padding and width stays in place */
+  margin-top: 15px; /* Add a top margin */
+  margin-bottom: 16px; /* Bottom margin */
+  resize: vertical /* Allow the user to vertically resize the textarea (not horizontally) */
+}
   
-  /* Style the submit button with a specific background color etc */
-  input[type=submit] {
-    background-color: #04AA6D;
-    color: white;
-    padding: 12px 20px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-  }
-  
-  /* When moving the mouse over the submit button, add a darker green color */
-  input[type=submit]:hover {
-    background-color: #45a049;
-  }
-  
-  /* Add a background color and some padding around the form */
-  .container {
-    border-radius: 5px;
-    background-color: orange;
-    padding: 20px;
-  }
+/* Style the submit button with a specific background color etc */
+input[type=submit] {
+  background-color: orangered;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+/* When moving the mouse over the submit button, add a darker green color */
+input[type=submit]:hover {
+  background-color: white;
+}
+
+footer {
+  color: orange;
+  position: fixed;
+  bottom: 10px;
+  width: 100%;
+  text-align: center;
+}
